# Music-Version-Control

./: .gitignore  CMakeLists.txt  LICENSE  NOTES.txt  README.md  requirements.txt
build-coverage/: CMakeCache.txt  CTestTestfile.cmake  Makefile  bvcs  cmake_install.cmake  test_commit  test_hasher  test_index  test_main  test_object_store  test_repository  test_utils
build-coverage/Testing/Temporary/: CTestCostData.txt
build-coverage/coverage/: index.commit.cpp.a583058da37e01b5166cdaad17ce688a.html  index.hasher.cpp.f84d743cfcd5c097e65c0343b797c380.html  index.html  index.index.cpp.180d794e65c0ea10e75f8dcdfa1b6ab4.html  index.main.cpp.06a92eab935e12d2a7b7c1b1a966ddf9.html  index.object_store.cpp.9539e77e78ee4e73729b1371ffad0185.html  index.repository.cpp.6d0bfca7112e977bf7440c50316901cd.html  index.utils.cpp.c8e83ae966407780bd42b747444e3ea6.html
bvcs_backend/: manage.py  requirements.txt
bvcs_backend/bvcs/: admin.py  apps.py  client.py  models.py  serializers.py  tests.py  urls.py  views.py
bvcs_backend/bvcs/migrations/: 0001_initial.py  0002_alter_repository_path.py
bvcs_backend/bvcs_backend/: asgi.py  settings.py  urls.py  wsgi.py
repos/test-repo/.bvcs/: HEAD
storageHandling/: .bvcsignore  a.out  commit.cpp  commit.h  hasher.cpp  hasher.h  index.cpp  index.h  main.cpp  object_store.cpp  object_store.h  repository.cpp  repository.h  utils.cpp  utils.h
tests/: test_commit.cpp  test_hasher.cpp  test_index.cpp  test_main.cpp  test_object_store.cpp  test_repository.cpp  test_utils.cpp
